# arpeggiorpg

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  SAM.yaml  add-creature-size.py  buildspec.yml  dice-updater.py  dprint.json  eberron-pre-dice-change.yaml  justfile  migrate.py  package.yaml  pandt.cabal  rustfmt.toml  stack.yaml
.github/: dependabot.yml
.github/workflows/: deploy-main.yml  docker.yml  ptui.yml  rust.yml
app/: Main.hs  Prelude.hs
arp3d/: Cargo.toml
arp3d/scripts/: extract_hardcoded_meshes_to_glb.py
arp3d/src/: camera.rs  lib.rs  mesh.rs  picking.rs  renderer.rs  wgpu.rs
arpeggio/: Cargo.toml  bindings
arpeggio/src/: combat.rs  creature.rs  game.rs  grid.rs  lib.rs  scene.rs  types.rs
arpeggio/src/game/: test.rs
arptypes/: Cargo.toml
arptypes/src/: command.rs  lib.rs  log.rs  multitenant.rs  types.rs
arpui/: .gitignore  Cargo.toml  Dioxus.toml  index.dev.html  index.prod.html
arpui/.zed/: settings.json
arpui/assets/models/: control_cursor.glb  creature.glb  terrain_cube.glb
arpui/src/: admin_view.rs  chat.rs  gm_view.rs  grid.rs  main.rs  player_view.rs  rpi.rs  tabbed_view.rs
arpui/src/components/: condition_popover.css  creature.rs  mod.rs  split_pane.rs
arpui/src/components/modal/: component.rs  mod.rs  style.css
arpui/src/components/tooltip/: component.rs  style.css
arpui/src/gfx/: dioxus.rs  mod.rs  wgpu.rs
arpui/src/grid/: svg_pan_zoom.rs
assets/DPS/: tavern.dps
assets/Sample Campaign/: Moxie's Garden.dungeondraft_map
devlog/2017-03-19/: README.md
devlog/2017-03-27/: README.md
devlog/2017-05-18/: README.md
docker/: build-base.ps1  build-lambda.ps1  lambda-builder.dockerfile  rust-builder-base.dockerfile
foldertree/: Cargo.toml
foldertree/src/: lib.rs
forks/google-signin-rs/: Cargo.toml
forks/google-signin-rs/src/: client.rs  error.rs  lib.rs  test.rs  token.rs
indexed/: Cargo.toml  README.md
indexed/src/: lib.rs
mtarp/: Cargo.toml
mtarp/src/: actor.rs  lib.rs  storage.rs  types.rs
nonempty/: Cargo.toml
nonempty/src/: lib.rs
pandt/: Cargo.toml  README.md  game.yaml
pandt/src/: app.rs  combat.rs  creature.rs  foldertree.rs  game.rs  grid.rs  indexed.rs  lib.rs  scene.rs  types.rs
pandt_lambda/: .gitignore  Cargo.toml  README.md  build-lambda.ps1
pandt_lambda/docker/: lambda-builder.dockerfile
pandt_lambda/src/: main.rs
ptbuild/: Cargo.toml
ptbuild/src/: main.rs
ptrpi/: Cargo.toml  Rocket.toml  buggy-game.yaml  build.rs  dd.yaml  samplegame.yaml  saved-game.yaml
ptrpi/modules/: fantasy-sample.yaml
ptrpi/proto/: helloworld.proto  pandt.proto
ptrpi/sample_games/: samplegame.yaml
ptrpi/src/: actor.rs  cors.rs  gents.rs  grpc.rs  lib.rs  main.rs  storage.rs  types.rs  web.rs
ptui/: .env  .env.production  .gitignore  Elements.elm  Grid.elm  Main.elm  Model.elm  MouseEvent.elm  Update.elm  View.elm  bower.json  elm-package.json  index.html  package-lock.json  package.json  template.html  tsconfig.json  tsconfig.tsbuildinfo  tslint.json  vite.config.ts  webpack.config.js  webpack.vendor.js
ptui/proto/: helloworld.client.ts  helloworld.ts  pandt.client.ts  pandt.ts  tsconfig.json
ptui/src/: Actions.ts  Campaign.tsx  CommonView.elm  CommonView.tsx  Component.ts  Components.elm  Components.js  CoolForm.tsx  Dice.ts  DomUtils.elm  DomUtils.js  Elements.elm  FolderView.elm  GM.elm  GMComponents.tsx  GMTest.elm  GMView.elm  GMView.tsx  Grid.elm  Grid.tsx  History.tsx  Main.elm  Main.purs  Main.tsx  MilfordGM.elm  MilfordPlayer.elm  Model.elm  Model.ts  PTTypes.ts  PanZoom.elm  PanZoom.js  Player.elm  PlayerTest.elm  PlayerView.elm  PlayerView.tsx  Players.tsx  ReactMain.elm  SVGPanZoom.tsx  SignIn.tsx  TextInput.tsx  (+9 more)
ptui/src/Native/: NativePT.js
ptui/src/bindings/: AABB.ts  AbilityID.ts  AttrID.ts  AttributeCheck.ts  ClassID.ts  ConditionID.ts  CreatureID.ts  DecidedTarget.ts  Dice.ts  Energy.ts  FolderItemID.ts  HP.ts  Item.ts  ItemID.ts  Note.ts  PlayerID.ts  Point3.ts  SceneID.ts  SkillLevel.ts  bindings.ts
ptui/src/lib/: cookie.ts
ptui/src/spec/: Dice.spec.ts  PTTypes.spec.ts  PTTypesSpec.ts
ptui/src/typescript/: Campaign.tsx  CommonView.tsx  Component.ts  CoolForm.tsx  Dice.ts  GMComponents.tsx  GMView.tsx  Grid.tsx  Hello.tsx  History.tsx  JsonDecode.ts  Model.ts  PTTypes.ts  PlayerView.tsx  Players.tsx  SVGPanZoom.tsx  TextInput.tsx  ambient.d.ts  index.tsx  react-window-resize-listener.d.ts  reactest.html
ptui/src/typescript/spec/: DiceSpec.ts  PTTypesSpec.ts
rpi/: Cargo.toml  Rocket.toml
rpi/sample_games/: testgame.yaml
rpi/src/: actor.rs  authn.rs  lib.rs  storage.rs  types.rs  waiters.rs  web.rs
rusty/: Cargo.toml  build.rs  game.json  game.yaml
rusty/nonempty/src/: lib.rs
rusty/src/: app.rs  lib.rs  main.rs  nonempty.rs  types.in.rs  types.rs
src/: Lib.hs  app.rs  combat.rs  creature.rs  game.rs  grid.rs  main.rs  smallstring.rs  types.rs
src/PandT/: Abilities.hs  Interaction.hs  Interpolate.hs  Prelude.hs  Render.hs  Sim.hs  Types.hs
test/: Spec.hs
ui/: .env  .env.production  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: AcceptInvitation.tsx  Actions.ts  Admin.tsx  Campaign.tsx  CommonView.tsx  Connector.tsx  CoolForm.tsx  Dice.ts  GMComponents.tsx  GMView.tsx  GameList.tsx  Grid.tsx  History.tsx  Main.tsx  Model.ts  PTTypes.ts  PlayerView.tsx  Players.tsx  SVGPanZoom.tsx  Scene.tsx  SignIn.tsx  TextInput.tsx  index.tsx  react-window-size-listener.d.ts  wsrpi.ts
ui/src/bindings/: bindings.ts
ui/src/lib/: hooks.tsx
ui/src/spec/: Dice.spec.ts  PTTypes.spec.ts
worker/: .gitignore  Cargo.toml  build.js  package-lock.json  package.json  schema.sql  wrangler.toml
worker/src/: cfworker.rs  domigrations.rs  dump.rs  durablegame.rs  durablestorage.rs  images.rs  legacykv.rs  lib.rs  sqlite.rs  storage.rs  tests.rs  wsrpi.rs
worker/src/domigrations/: buggydump.json  dumped-legacy-kv.json  sqlite_migration.rs  v2_sqlite.rs
