[workspace]
members = ["foldertree", "indexed", "nonempty", "arpeggio", "rpi", "worker", "mtarp"]
resolver = "2"


[workspace.dependencies]
anyhow = {version = "1.0.75", features = ["backtrace"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
# Unfortunately this google-signin package seems pretty unmaintained.
# I need to use the git version because the support for local verification of ID tokens is only in
# an unreleased version.
google-signin = { path = "./forks/google-signin-rs" }
once_cell = "1.18.0"
strum = { version = "0.25.0", features = ["derive"] }
