[workspace]
members = ["foldertree", "indexed", "nonempty", "arpeggio", "worker", "arptypes"]
exclude = ["arpui"]
resolver = "2"

[workspace.lints.clippy]
unnecessary_lazy_evaluations = "allow"

[workspace.dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
derive_more = "2.1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
once_cell = "1.18.0"
strum = { version = "0.27.2", features = ["derive"] }
percent-encoding = "2.3.0"
thiserror = "2.0.17"
tracing = { version = "0.1.43", features = ["attributes"] }
num = "0.4.3"
num-traits = "0.2.10"
ts-rs = { version = "11.1.0", features = ["serde-compat", "uuid-impl"] }
# We don't explicitly depend on getrandom anywhere, but we need to add features to it for WASM
# support. The features are specified in specific member crates.
getrandom = { version = "0.2.9" }

[workspace.dependencies.uom]
version = "0.37"
default-features = false
features = ["u32", "i64", "serde", "si"]

[profile.release]
lto = true
strip = true
codegen-units = 1
