name:                pandt
version:             0.1.0.0
synopsis:            Phone-and-Tablet Roleplaying Game
description:         Please see README.md
homepage:            http://github.com/radix/pandt#readme
license:             AllRightsReserved
license-file:        LICENSE
author:              Christopher Armstrong
maintainer:          radix@twistedmatrix.com
copyright:           all rights reserved
category:            ???
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, PandT.Types
  other-modules:       Prelude
  build-depends:       base-noprelude
                     , classy-prelude
                     , containers
                     , text
                     , lens
  default-language:    Haskell2010

executable pandt-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:        Prelude
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base-noprelude
                     , classy-prelude
                     , pandt
  default-language:    Haskell2010

test-suite pandt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base-noprelude
                     , pandt
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/radix/pandt
