name:                pandt
version:             0.1.0.0
synopsis:            Phone-and-Tablet Roleplaying Game
description:         Please see README.md
homepage:            http://github.com/radix/pandt#readme
license:             MIT
author:              Christopher Armstrong
maintainer:          radix@twistedmatrix.com
copyright:           2016 Christopher Armstrong
category:            Games
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:    PandT.Prelude
                    , PandT.Types
                    , PandT.Interaction
                    , PandT.Abilities
                    , PandT.Render
                    , PandT.Sim
  build-depends:      base-noprelude
                    , classy-prelude
                    , containers
                    , grid
                    , interpolate
                    , lens
                    , mtl
                    , template-haskell
                    , text
                    , transformers
  default-language:    Haskell2010
  default-extensions: NoImplicitPrelude, OverloadedStrings, GADTs, MultiWayIf, QuasiQuotes

executable pandt-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base-noprelude
                     , classy-prelude
                     , pandt
  default-language:    Haskell2010
  default-extensions: NoImplicitPrelude, OverloadedStrings, GADTs, MultiWayIf

test-suite pandt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base-noprelude
                     , classy-prelude
                     , grid
                     , HUnit
                     , lens
                     , mtl
                     , pandt
                     , tasty
                     , tasty-hunit
                     , transformers
  default-extensions: NoImplicitPrelude, OverloadedStrings, GADTs, MultiWayIf
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/radix/pandt
