[package]
name = "arpeggio"
version = "0.1.0"
authors = ["Christopher Armstrong"]
edition = "2021"

[dev-dependencies]
criterion = "0.3.0"
serde_json = "1.0"
serde_yaml = "0.8"

[dependencies]
bresenham = "0.1.1"
derive_more = "0.99.2"
thiserror = "1.0.48"
foldertree = {version = "*", path = "../foldertree", features = ["serde"]}
indexed = {version = "*", path = "../indexed", features = ["serde"]}
maplit = "1.0.2"
ncollide3d = "0.33"
nonempty = {version = "*", path = "../nonempty", features = ["use_serde"]}
num = "0.2.0"
num-traits = "0.2.10"
rand = "0.8.5"
serde = "1.0.8"
serde_derive = "1.0.8"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
ts-rs = {version = "7.0.0", features = ["serde-compat", "uuid-impl"]}

[dependencies.uom]
version = "0.35"
default-features = false
features = ["u32", "i64", "serde", "si"]
