[package]
name = "arpeggio"
version = "0.1.0"
authors = ["Christopher Armstrong"]
edition = "2021"

[dev-dependencies]
criterion = "0.3.0"
serde_json = "1.0"
serde_yaml = "0.8"

[dependencies]
arptypes = { path = "../arptypes", version = "*" }
bresenham = "0.1.1"
derive_more = { workspace = true }
foldertree = { version = "*", path = "../foldertree", features = ["serde"] }
indexed = { version = "*", path = "../indexed", features = ["serde"] }
maplit = "1.0.2"
ncollide3d = "0.33"
nonempty = { version = "*", path = "../nonempty", features = ["use_serde"] }
num = { workspace = true }
num-traits = { workspace = true }
rand = "0.8.5"
serde = "1.0.8"
serde_derive = "1.0.8"
thiserror = { workspace = true }
tracing = { workspace = true }
uom = { workspace = true }
ts-rs = { workspace = true, features = ["serde-compat", "uuid-impl"] }

uuid = { workspace = true }
