[package]
name = "arpui"
version = "0.1.0"
authors = ["Christopher Armstrong <227068+radix@users.noreply.github.com>"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
arptypes = { path = "../arptypes", version = "*" }
console_error_panic_hook = "0.1.7"
dioxus = { version = "0.7.0", features = ["web", "router"] }
futures = "0.3.30"
futures-util = { version = "*" }
# arpeggio depend on rand, which depends on getrandom, which by default does not work on WASM. We
# need to enable the "js" feature. Unfortunately, since arpui is not a workspace member, we have to
# manually pin the version to the same one. (Wait, why aren't we a workspace member again? mostly
# because I'm afraid of dependency conflicts between workers-rs and dioxus versions of dependencies)
getrandom = { version = "0.2.9", features = ["js"] }
log = "0.4.19"
reqwest = { version = "0.12.3", features = ["json"] }
reqwest-websocket = { version = "0.3" }
serde = { version = "*" }
serde_json = { version = "*" }
tracing = "0.1.41"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
wasm-bindgen-futures = "0.4.42"
wasm-cookies = "0.2.1"

[dependencies.web-sys]
version = "0.3.69"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
