[package]
name = "nonempty"
version = "0.1.0"
authors = ["Christopher Armstrong <radix@twistedmatrix.com>"]

[features]
use_serde = ["serde", "serde_derive"]

[dev-dependencies]
serde_json = "0.9"

[dependencies]
serde = {version = "0.9", optional = true}
serde_derive = {version = "0.9", optional = true}
