[package]
name = "pandt"
version = "0.1.0"
authors = ["Christopher Armstrong <radix@twistedmatrix.com>"]
edition = "2018"

[dev-dependencies]
serde_json = "1.0.2"
criterion = "0.1.2"

[dependencies]
bresenham = "0.1.1"
derive_more = "0.4.0"
error-chain = "0.11.0-rc.2"
failure = "0.1"
failure_derive = "0.1"
foldertree = {version = "*", path = "../foldertree", features = ["serde"]}
indexed = {version = "*", path = "../indexed", features = ["serde"]}
log = "0.3"
maplit = "0.1.4"
nalgebra = "0.11.2"
ncollide = "0.11.0"
nonempty = {version = "*", path = "../nonempty", features = ["use_serde"]}
num = "0.1.41"
num-traits = "0.1.41"
odds = "0.2.25"
rand = "0.3"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_yaml = "0.7.0"
uuid = {version = "0.5", features = ["v4", "serde"]}

[dependencies.uom]
# version = "0.16"
git = "https://github.com/iliekturtles/uom"
# revision of uom which disables automatic conversion between types when performing basic operations
rev = "965d1112894a790c9f8519bd996131bcd8596244"
default-features = false
features = ["u32", "i64", "serde", "si"]
