[package]
name = "pandt"
version = "0.1.0"
authors = ["Christopher Armstrong"]
edition = "2018"

[dev-dependencies]
criterion = "0.3.0"
serde_json = "1.0"
serde_yaml = "0.8"

[dependencies]
bresenham = "0.1.1"
derive_more = "0.99.2"
error-chain = "0.12.1"
thiserror = "1.0.48"
foldertree = {version = "*", path = "../foldertree", features = ["serde"]}
indexed = {version = "*", path = "../indexed", features = ["serde"]}
log = "0.4.8"
maplit = "1.0.2"
ncollide3d = "0.33"
nonempty = {version = "*", path = "../nonempty", features = ["use_serde"]}
num = "0.2.0"
num-traits = "0.2.10"
rand = "0.7.2"
serde = "1.0.8"
serde_derive = "1.0.8"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
ts-rs = {version = "6.1", features = ["serde-compat", "uuid-impl"]}

[dependencies.uom]
version = "0.35"
default-features = false
features = ["u32", "i64", "serde", "si"]
