[package]
name = "pandt_lambda"
version = "0.1.0"
authors = ["Christopher Armstrong"]
edition = "2018"

[dependencies]
aws_lambda = { git = "https://github.com/srijs/rust-aws-lambda", rev = "1435a4dbdf72a1d35afd5943a0d7f0f2938ba649" }
failure = "0.1"
failure_derive = "0.1"
graphql_client = "0.5"
pandt = { path = "../pandt" }
rusoto_core = "0.35"
rusoto_dynamodb = "0.35"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
