[package]
name = "ptrpi"
version = "0.1.0"
authors = ["Christopher Armstrong"]
edition = "2018"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
env_logger = "0.7"
error-chain = "0.12.1"
foldertree = {version = "*", path = "../foldertree"}
anyhow = "1.0.75"
thiserror = "1.0.48"
futures = "0.3.1"
http = "0.2.0"
log = "0.4.8"
pandt = {version = "*", path = "../pandt"}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
structopt = "0.3"
tokio = {version = "1.32", features = ["time", "sync", "rt", "macros", "rt-multi-thread"]}
tonic-web = "0.10"
