[package]
name = "ptrpi"
version = "0.1.0"
authors = ["Christopher Armstrong"]
edition = "2021"

[dependencies]
async-trait = "0.1.73"
axum = {version = "0.6.20"}
env_logger = "0.10.0"
error-chain = "0.12.1"
foldertree = {version = "*", path = "../foldertree"}
anyhow = {version = "1.0.75", features = ["backtrace"]}
thiserror = "1.0.48"
futures = "0.3.1"
http = "0.2.0"
tracing = { version = "0.1.37", features = ["attributes"]}
pandt = {version = "*", path = "../pandt"}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
clap = {version = "4.4.6", features = ["derive"]}
tokio = {version = "1.32", features = ["time", "sync", "rt", "macros", "rt-multi-thread"]}
tower-http = {version = "0.4.4", features = ["cors", "trace"]}
ts-rs = {version = "6.1", features = ["serde-compat", "uuid-impl"]}
uom = {version = "0.35", default_features = false}
uuid = { version = "0.8.1", features = ["v4", "serde"] }
google-cloud-storage = "0.13.1"
# Unfortunately this google-signin package seems pretty unmaintained.
# I need to use the git version because the support for local verification of ID tokens is only in
# an unreleased version.
google-signin = { git = "https://github.com/wyyerd/google-signin-rs" }
