[package]
name = "rpi"
description = "Arpeggio's Remote Programming Interface (web-based) -- in other words, the web app that hosts Arpeggio games."
version = "0.1.0"
authors = ["Christopher Armstrong"]
edition = "2021"

[dependencies]
async-trait = "0.1.73"
axum = {version = "0.6.20"}
foldertree = {version = "*", path = "../foldertree"}
anyhow = { workspace = true }
thiserror = "1.0.48"
futures = "0.3.1"
http = "0.2.0"
tracing = { version = "0.1.37", features = ["attributes"]}
tracing-subscriber = {version = "0.3.17", features = ["env-filter", "json"]}
arpeggio = {version = "*", path = "../arpeggio"}
mtarp = {version = "*", path = "../mtarp"}
serde = {worker = true}
serde_derive = {worker = true}
serde_json = {worker = true}
serde_yaml = {worker = true}
clap = {version = "4.4.6", features = ["derive"]}
tokio = {version = "1.32", features = ["time", "sync", "rt", "macros", "rt-multi-thread"]}
tower-http = {version = "0.4.4", features = ["cors", "trace"]}
ts-rs = {version = "7.0.0", features = ["serde-compat", "uuid-impl"]}
uom = {version = "0.35", default_features = false}
uuid = { version = "1.1.2", features = ["v4", "serde"] }
google-cloud-storage = "0.13.1"
# Unfortunately this google-signin package seems pretty unmaintained.
# I need to use the git version because the support for local verification of ID tokens is only in
# an unreleased version.
google-signin = { git = "https://github.com/wyyerd/google-signin-rs" }
