[package]
name = "rpi"
version = "0.1.0"
authors = ["Christopher Armstrong"]
edition = "2021"
description = "Arpeggio's Remote Programming Interface (web-based) -- in other words, the web app that hosts Arpeggio games."

[dependencies]
anyhow = { workspace = true }
arpeggio = { version = "*", path = "../arpeggio" }
async-trait = "0.1.73"
axum = { version = "0.6.20" }
clap = { version = "4.4.6", features = ["derive"] }
foldertree = { version = "*", path = "../foldertree" }
futures = "0.3.1"
google-cloud-storage = "0.13.1"
google-signin = { workspace = true }
http = "0.2.0"
mtarp = { version = "*", path = "../mtarp" }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.32", features = ["time", "sync", "rt", "macros", "rt-multi-thread"] }
tower-http = { version = "0.4.4", features = ["cors", "trace"] }
tracing = { version = "0.1.37", features = ["attributes"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
ts-rs = { version = "7.0.0", features = ["serde-compat", "uuid-impl"] }
uom = { version = "0.35", default_features = false }
uuid = { workspace = true }
