[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
arpeggio = { version = "*", path = "../arpeggio" }
console_error_panic_hook = "0.1.6"
foldertree = { path = "../foldertree" }
futures-util = { version = "0.3.28", default-features = false }
# arpeggio depend on rand, which depends on getrandom, which by default does not work on WASM. We need to enable the "js" feature.
getrandom = { version = "0.2.9", features = ["js"] }
google-signin = { workspace = true }
gloo-timers = "0.3.0"
mtarp = { version = "*", path = "../mtarp" }
percent-encoding = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = "0.6.0"
serde_json = "1.0"
strum = { workspace = true }
# futures-channel = "0.3.28"
uuid = { workspace = true }
worker = { version = "0.0.18", features = ["d1"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-web = "0.1.2"
tracing-subscriber = { version = "0.3.17", features = ["time", "json"]}
time = { version = "0.3.30", features=['wasm-bindgen'] }

[profile.release]
lto = true
strip = true
codegen-units = 1
