[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
arpeggio = { version = "*", path = "../arpeggio" }
arptypes = { path = "../arptypes", version = "*" }
console_error_panic_hook = "0.1.6"
foldertree = { path = "../foldertree" }
futures-util = { version = "0.3.28", default-features = false }
# arpeggio depend on rand, which depends on getrandom, which by default does not work on WASM. We
# need to enable the "js" feature.
getrandom = { workspace = true, features = ["js"] }
gloo-timers = "0.3.0"
google-oauth = { version = "1.6.0", features = ["wasm"] }
percent-encoding.workspace = true
reqwest = { version = "0.11.22", features = ["json", "multipart"] }
serde.workspace = true
serde-wasm-bindgen = "0.6.0"
serde_json = "1.0"
strum.workspace = true
thiserror.workspace = true
time = { version = "0.3.30", features = ['wasm-bindgen'] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.17", features = ["time", "json"] }
tracing-web = "0.1.2"
# futures-channel = "0.3.28"
uuid.workspace = true
# Depending on a git rev of workers-rs to get some unreleased changes (notably a dependency on
# wasm-bindgen which they for some reason pin to a specific patch version)
worker = { git = "https://github.com/cloudflare/workers-rs/", rev = "cbd98b4a941431ef81f207951179047daf922415", features = ["d1"] }
