[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
arpeggio = { version = "*", path = "../arpeggio" }
arptypes = { path = "../arptypes", version = "*" }
foldertree = { path = "../foldertree" }
futures-util = { version = "0.3.28", default-features = false }
# arpeggio depend on rand, which depends on getrandom, which by default does not work on WASM. We
# need to enable the "js" feature.
getrandom = { workspace = true, features = ["js"] }
# TODO: apparently workers-rs uses tokio now! We should try replacing gloo-timers with regular tokio
# time code.
gloo-timers = "0.3.0"
google-oauth = { version = "1.11.4", features = ["wasm"] }
percent-encoding.workspace = true
reqwest = { version = "0.12.24", features = ["json", "multipart"] }
serde.workspace = true
serde-wasm-bindgen = "0.6.0"
serde_json = "1.0"
serde_path_to_error = "0.1.20"
strum.workspace = true
thiserror.workspace = true
time = { version = "0.3.44", features = ['wasm-bindgen'] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.22", features = ["time", "json"] }
tracing-web = "0.1.2"
# futures-channel = "0.3.28"
uuid = { workspace = true, features = ["js"] }
# Depending on a git rev of workers-rs to get some unreleased changes (notably a dependency on
# wasm-bindgen which they for some reason pin to a specific patch version)
worker = { version = "0.7.2", features = ["d1"] }
