[package]
name = "google-signin"
version = "0.4.0"
authors = ["Kevin Stenerson <kstenerson@developers.wyyerd.com>"]
categories = ["api-bindings"]
documentation = "https://docs.rs/google-signin"
edition = "2021"
keywords = ["google", "signin", "oauth", "oauth2", "api"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/wyyerd/google-signin-rs"
description = "API bindings for Google Sign-In"

[dependencies]
base64 = "0.21.4"
bytes = "^1.1"
cache_control = "0.1.0"
instant = { version = "0.1", features = ["wasm-bindgen"] }
jwt-compact = { version = "^0.8.0", features = ["rsa", "clock"] }
num-bigint-dig = "0.8.4"
num-traits = "0.2.17"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

[dev-dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
